[package]
name    = "merkle-sha3"
version = "0.1.0"
authors = [
  "Frederic Jacobs <me@fredericjacobs.com>",
  "Dylan Bourgeois <dtsbourg@gmail.com>",
  "Romain Ruetschi <romain.ruetschi@gmail.com>",
  "Wei Tang <hi@that.world>"
]

description   = "Sha3-Merkle is a fork of merkle.rs, a Merkle tree with support for generation of inclusion proofs, in sha3."
license       = "BSD-3-Clause"
homepage      = "https://github.com/sorpaas/merkle.rs"
repository    = "https://github.com/sorpaas/merkle.rs"

[lib]
name = "merkle"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dependencies]
rust-crypto = { git ="https://github.com/mesalock-linux/rust-crypto-sgx", version = "^0.2"}
protobuf = { path = "../protobuf", version = "^1.2.0", optional = true }

[features]
serialization-protobuf = [ "protobuf" ]
